# vector

./: .gitignore  CMakeLists.txt  README.md  documentation.txt  test.cpp
examples/: makefile  run.sh  stream.cpp
include/: Allocator.h  Allocator.hpp  Array.h  Array.hpp  ArrayView.h  ArrayView.hpp  CudaEvent.h  CudaStream.h  DeviceCoordinator.h  DeviceCoordinator.hpp  Event.h  HostCoordinator.h  HostCoordinator.hpp  Range.h  Range.hpp  RangeLimits.h  SplitRange.h  SplitRange.hpp  Vector.h  Vector.hpp  alignment.hpp  allocator.h  array.h  array_base.h  array_view.h  coordinator.h  definitions.h  device_coordinator.h  event.h  host_coordinator.h  hostcoordinator.h  range.h  range_wrapper.h  split_range.h  storage.h  util.h  util.hpp  vector.h
include/detail/: array.h  array_base.h
tests/: .ycm_extra_conf.py  CMakeLists.txt  allocator_unittest.cpp  array_base_unittest.cpp  array_reference_unittest.cpp  array_unittest.cpp  array_view_unittest.cpp  coordinator_unittest.cpp  device_coordinator_unittest.cpp  device_vector_unittest.cpp  driver.cpp  gpu_vector_unittest.cpp  gtest.cpp  host_coordinator_unittest.cpp  host_vector_unittest.cpp  hostcoordinator_unittest.cpp  makefile  pinned_vector_unittest.cpp  range_unittest.cpp  range_wrapper_unittest.cpp  split_range_unittest.cpp  storage_unittest.cpp  view_alignment_unittest.cpp
vector/: definitions.h  hostcoordinator.h  range.h  storage.h  vector.h
